# stacked

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  index.html  install.ps1  install.sh
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  phase_task.yml
docs/: PROVENANCE.md  ROADMAP.md  advanced.md  agents.md  auth.md  commands.md  configuration.md  hooks.md  index.html  index.md  installation.md  keybindings.md  mcp.md  plugins.md  providers.md  tools.md
docs/adr/: 0001-phase-1-agent-runtime.md
npm/: README.md  install.js  package.json
scripts/: append-patch-note.py  bump-version.py
session/: index.html
src-rust/: Cargo.toml
src-rust/crates/acp/: Cargo.toml
src-rust/crates/acp/registry-template/: agent.json
src-rust/crates/acp/src/: lib.rs  permission.rs  prompt.rs  runtime.rs  server.rs  sessions.rs
src-rust/crates/api/: Cargo.toml
src-rust/crates/api/src/: cch.rs  codex_adapter.rs  error_handling.rs  lib.rs  model_registry.rs  provider.rs  provider_error.rs  provider_types.rs  registry.rs  stream_parser.rs
src-rust/crates/api/src/providers/: anthropic.rs  azure.rs  bedrock.rs  codex.rs  cohere.rs  copilot.rs  free.rs  google.rs  message_normalization.rs  minimax.rs  openai.rs  openai_compat.rs  openai_compat_providers.rs
src-rust/crates/api/src/transformers/: anthropic.rs  openai_chat.rs
src-rust/crates/bridge/: Cargo.toml
src-rust/crates/bridge/src/: lib.rs
src-rust/crates/buddy/: Cargo.toml
src-rust/crates/buddy/src/: lib.rs
src-rust/crates/cli/: Cargo.toml  build.rs
src-rust/crates/cli/src/: codex_oauth_flow.rs  main.rs  oauth_flow.rs  system_prompt.txt  upgrade.rs
src-rust/crates/cli/tests/: acp_smoke.rs
src-rust/crates/commands/: Cargo.toml
src-rust/crates/commands/src/: lib.rs  named_commands.rs  stats.rs
src-rust/crates/core/: Cargo.toml
src-rust/crates/core/src/: accounts.rs  analytics.rs  attachments.rs  auth_store.rs  bash_classifier.rs  claudemd.rs  context_collapse.rs  device_code.rs  effort.rs  feature_flags.rs  feature_gates.rs  git_utils.rs  goal.rs  ide.rs  import_config.rs  keybindings.rs  lib.rs  lsp.rs  memdir.rs  oauth_config.rs  output_styles.rs  prompt_history.rs  ps_classifier.rs  remote_settings.rs  session_storage.rs  settings_sync.rs  skill_discovery.rs  system_prompt.rs  tips.rs  update_check.rs  voice.rs
src-rust/crates/core/src/share_export/: mod.rs  template.html  template.js
src-rust/crates/core/src/snapshot/: shadow.rs
src-rust/crates/core/tests/: parity_smoke.rs  snapshot_tests.rs  test_mcp_templates.rs
src-rust/crates/mcp/: Cargo.toml
src-rust/crates/mcp/src/: connection_manager.rs  lib.rs  oauth.rs  registry.rs  rmcp_backend.rs
src-rust/crates/plugins/: Cargo.toml
src-rust/crates/plugins/src/: lib.rs  loader.rs  marketplace.rs  plugin.rs  registry.rs
src-rust/crates/query/: Cargo.toml
src-rust/crates/query/src/: agent_tool.rs  away_summary.rs  command_queue.rs  compact.rs  context_analyzer.rs  coordinator.rs  cron_scheduler.rs  goal_loop.rs  lib.rs  managed_orchestrator.rs  session_memory.rs  skill_prefetch.rs
src-rust/crates/tools/: Cargo.toml
src-rust/crates/tools/src/: agent_tool.rs  apply_patch.rs  ask_user.rs  bash.rs  batch_edit.rs  bundled_skills.rs  computer_use.rs  config_tool.rs  cron.rs  enter_plan_mode.rs  exit_plan_mode.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  goal_complete.rs  grep_tool.rs  lib.rs  lsp_tool.rs  mcp_auth_tool.rs  monitor_tool.rs  notebook_edit.rs  powershell.rs  pty_bash.rs  remote_trigger.rs  skill_tool.rs  tasks.rs  team_tool.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree.rs
src-rust/crates/tui/: Cargo.toml
src-rust/crates/tui/src/: agents_view.rs  app.rs  ask_user_dialog.rs  bypass_permissions_dialog.rs  context_viz.rs  custom_provider_dialog.rs  desktop_upsell_startup.rs  device_auth_dialog.rs  dialog_select.rs  dialogs.rs  diff_viewer.rs  export_dialog.rs  feedback_survey.rs  free_mode_dialog.rs  hooks_config_menu.rs  import_config_dialog.rs  invalid_config_dialog.rs  key_input_dialog.rs  kitty_image.rs  lib.rs  mcp_view.rs  memory_file_selector.rs  memory_update_notification.rs  message_copy.rs  model_picker.rs  notifications.rs  onboarding_dialog.rs  osc8.rs  overlays.rs  plugin_views.rs  prompt_input.rs  render.rs  rustle.rs  settings_screen.rs  stats_dialog.rs  tasks_overlay.rs  theme_colors.rs  theme_screen.rs  transcript_turn.rs  voice_capture.rs
src-rust/crates/tui/src/messages/: mod.rs
src-rust/crates/tui/tests/: diff_viewer.rs  markdown_enhancements.rs  render_snapshots.rs
src-rust/scripts/: sync-models.ps1  sync-models.sh
