[package]
name = "cyphes-acp"
version.workspace = true
edition.workspace = true
description = "Agent Client Protocol (ACP) server for CYPHES — JSON-RPC 2.0 over stdio"

[dependencies]
cyphes-core = { workspace = true }
cyphes-api = { workspace = true }
cyphes-tools = { workspace = true }
cyphes-query = { workspace = true }
cyphes-mcp = { workspace = true }
cyphes-plugins = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
agent-client-protocol-schema = { version = "0.13", default-features = false }
