[package]
name = "cyphes"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cyphes"
path = "src/main.rs"

[features]
default = ["voice"]
voice = ["cyphes-core/voice", "cyphes-tui/voice"]

[dependencies]
cyphes-core = { workspace = true }
cyphes-api = { workspace = true }
cyphes-acp = { workspace = true }
cyphes-tools = { workspace = true }
cyphes-query = { workspace = true }
cyphes-tui = { workspace = true }
cyphes-commands = { workspace = true }
cyphes-mcp = { workspace = true }
cyphes-bridge = { workspace = true }
cyphes-plugins = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
crossterm = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
nix = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
open = "5"
urlencoding = "2"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[build-dependencies]
chrono = { workspace = true }
