[package]
name = "cyphes-commands"
version.workspace = true
edition.workspace = true

[features]
# Pass-through features from cc-core
ultraplan = ["cyphes-core/ultraplan"]

[dependencies]
cyphes-core = { workspace = true }
cyphes-api = { workspace = true }
cyphes-tools = { workspace = true }
cyphes-query = { workspace = true }
cyphes-mcp = { workspace = true }
cyphes-tui = { workspace = true }
cyphes-plugins = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
arboard = { version = "3", default-features = false }
urlencoding = { workspace = true }
open = { workspace = true }
qrcode = { workspace = true }
cyphes-bridge = { workspace = true }
hostname = "0.4"
tokio-tungstenite = { version = "0.24", features = ["native-tls-vendored"] }
futures = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
