[package]
name = "cyphes-tui"
version.workspace = true
edition.workspace = true

[features]
# Enable real microphone capture for voice PTT mode.
voice = ["cyphes-core/voice", "dep:cpal", "dep:hound"]

# UI & Interaction features (pass-through from cc-core)
token_budget = ["cyphes-core/token_budget"]
ultraplan = ["cyphes-core/ultraplan"]
ultrathink = ["cyphes-core/ultrathink"]
history_picker = ["cyphes-core/history_picker"]
message_actions = ["cyphes-core/message_actions"]
quick_search = ["cyphes-core/quick_search"]
away_summary = ["cyphes-core/away_summary"]
hook_prompts = ["cyphes-core/hook_prompts"]
kairos_brief = ["cyphes-core/kairos_brief"]
kairos_channels = ["cyphes-core/kairos_channels"]
lodestone = ["cyphes-core/lodestone"]

# Agents & Memory features (pass-through from cc-core)
agent_triggers = ["cyphes-core/agent_triggers"]
agent_triggers_remote = ["cyphes-core/agent_triggers_remote"]
extract_memories = ["cyphes-core/extract_memories"]
verification_agent = ["cyphes-core/verification_agent"]
builtin_explore_plan_agents = ["cyphes-core/builtin_explore_plan_agents"]
cached_microcompact = ["cyphes-core/cached_microcompact"]
compaction_reminders = ["cyphes-core/compaction_reminders"]
agent_memory_snapshot = ["cyphes-core/agent_memory_snapshot"]
teammem = ["cyphes-core/teammem"]

# Tools & Infrastructure features (pass-through from cc-core)
bash_classifier = ["cyphes-core/bash_classifier"]
bridge_mode = ["cyphes-core/bridge_mode"]
mcp_rich_output = ["cyphes-core/mcp_rich_output"]
connector_text = ["cyphes-core/connector_text"]
unattended_retry = ["cyphes-core/unattended_retry"]
new_init = ["cyphes-core/new_init"]
powershell_auto_mode = ["cyphes-core/powershell_auto_mode"]
shot_stats = ["cyphes-core/shot_stats"]
tree_sitter_bash = ["cyphes-core/tree_sitter_bash"]
tree_sitter_bash_shadow = ["cyphes-core/tree_sitter_bash_shadow"]
native_clipboard_image = ["cyphes-core/native_clipboard_image"]
prompt_cache_break_detection = ["cyphes-core/prompt_cache_break_detection"]
ccr_auto_connect = ["cyphes-core/ccr_auto_connect"]
ccr_mirror = ["cyphes-core/ccr_mirror"]
ccr_remote_setup = ["cyphes-core/ccr_remote_setup"]

[dependencies]
cyphes-core = { workspace = true }
cyphes-api = { workspace = true }
cyphes-tools = { workspace = true }
cyphes-query = { workspace = true }
cyphes-mcp = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
similar = { workspace = true }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
once_cell = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
icy_sixel = { workspace = true }
image = { workspace = true }
regex = { workspace = true }
# Optional audio capture for voice PTT (gated behind the `voice` feature)
cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
